[package]
name = "rust-website"
version = "0.1.0"
authors = ["Jason Kaczmarsky <jkaczmarsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
futures = "0.3"
actix-rt = "1.0"
actix-web = "2.0"
actix-http = "1.0"
reqwest = {version = "0.10", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
failure = "0.1"